Fixed alignment on guide car

--- a/styles.css
+++ b/styles.css
@@ -34,8 +34,9 @@ text-shadow: 1px 1px 1px black;
 }
 .activity-description{
     display: flex;
-    width:80%;
+    width:100%;
     margin:0 auto;
+    padding:50px;
 }
 .single-activity{
     width:300px;
@@ -43,28 +44,31 @@ text-shadow: 1px 1px 1px black;
 .guide{
    display: flex;
     background-color:lightblue;
-    width: 500px;
+    width: 60%;
     height: auto;
     margin: 20px auto;
-    padding:5px 100px;
+    padding:15px 20px;
     border-radius: 10px;
 }
 
 .guide-photo{
-    margin: auto 75px auto 0;
+    margin: auto 20px auto 0;
+    width: 300px;
 }
 
 .guide-text{
-    margin: auto 0px auto 0;
+    width:300px;
+   margin: auto 0px auto 0;
 }
 
 .guide h3{
-    font-size: 1.75em;
+    font-size: 1.5em;
 }
 
 .guide p{
-    font-size: 1.2em;
+    font-size: 1em;
     font-style: italic;
+    padding: 20px 0px 5px;
 }
 
 .activities img {
